crates/bitnet-generation/tests/snapshots/snapshot_tests__generation_stats_default_json.snap
---
source: crates/bitnet-generation/tests/snapshot_tests.rs
expression: json
---
{
  "tokens_generated": 0,
  "tokens_per_second": 0.0
}
