crates/bitnet-generation/tests/snapshots/snapshot_tests__generation_stats_with_values_json.snap
---
source: crates/bitnet-generation/tests/snapshot_tests.rs
expression: json
---
{
  "tokens_generated": 42,
  "tokens_per_second": 15.5
}
