crates/bitnet-generation/tests/snapshots/snapshot_tests__stop_criteria_default.snap
---
source: crates/bitnet-generation/tests/snapshot_tests.rs
expression: criteria
---
StopCriteria {
    stop_token_ids: [],
    stop_strings: [],
    max_tokens: 0,
    eos_token_id: None,
}
