crates/bitnet-generation/tests/snapshots/snapshot_tests__stop_criteria_with_values.snap
---
source: crates/bitnet-generation/tests/snapshot_tests.rs
expression: criteria
---
StopCriteria {
    stop_token_ids: [
        128009,
        2,
    ],
    stop_strings: [
        "</s>",
    ],
    max_tokens: 64,
    eos_token_id: Some(
        2,
    ),
}
