crates/bitnet-generation/tests/snapshots/snapshot_tests__stop_reason_debug_variants.snap
---
source: crates/bitnet-generation/tests/snapshot_tests.rs
expression: debug
---
[
    "MaxTokens",
    "StopTokenId(128009)",
    "StopString(\"</s>\")",
    "EosToken",
]
