crates/bitnet-generation/tests/snapshots/snapshot_tests__stream_event_token.snap
---
source: crates/bitnet-generation/tests/snapshot_tests.rs
expression: event
---
Token(
    TokenEvent {
        id: 1234,
        text: "hello",
    },
)
